src/styles/bins.scss
div.bins-container {
	text-align: center;
	position: absolute;
	bottom: 0;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: baseline;
	div.bin {
		display: inline-block;
		margin: 0 4vw;
		div {
			display: none;
		}
		transition: width 0.1s, height 0.1s;
	}
}

div.bin-timer-countdown {
	background: #EEE;
	display: inline-block;
	position: absolute;
	width: 5vw;
	line-height: 5vw;
	font-size: 2vw;
	right: 2.5vw;
	bottom: 2.5vw;
	color: #666;
	border-radius: 50%;	
}

